@@ -213,9 +213,7 @@ table.ProjectSummary tbody td.feed {
 	padding-right: 2px;
 }
 
-th.offline,
-th.idle,
-th.success {
+th.offline, th.idle, th.building {
 	background: white url(offline.png) center right no-repeat;
 	padding: 0 16px;
 }
@@ -226,6 +224,10 @@ th.idle {
 
 th.building {
 	background-image: url(building.png);
+}
+
+th.offline {
+	color: #888;
 }
 
 td.success {
