@@ -1,5 +1,10 @@
 2008-08-15  Frederic Peters  <fpeters@0d.be>
 
+	* buildbot/public_html/lgo.css: fixed background image repeat; changed
+	text color for offline hosts.
+
+2008-08-15  Frederic Peters  <fpeters@0d.be>
+
 	* buildbot/public_html/lgo.css: added padding for long slave names.
 
 2008-08-15  Frederic Peters  <fpeters@0d.be>
